tests/fixtures/gcloud/acme-dev-web-3f9c/firewall-rules.json
[
  {
    "kind": "compute#firewall",
    "id": "4000000000000000001",
    "creationTimestamp": "2025-03-02T08:15:00.000-08:00",
    "name": "allow-ssh-anywhere",
    "description": "temporary debug access",
    "network": "https://www.googleapis.com/compute/v1/projects/acme-dev-web-3f9c/global/networks/default",
    "priority": 1000,
    "direction": "INGRESS",
    "logConfig": {
      "enable": false
    },
    "disabled": false,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/acme-dev-web-3f9c/global/firewalls/allow-ssh-anywhere",
    "sourceRanges": [
      "0.0.0.0/0"
    ],
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "22"
        ]
      }
    ]
  },
  {
    "kind": "compute#firewall",
    "id": "4000000000000000002",
    "creationTimestamp": "2025-03-02T08:15:00.000-08:00",
    "name": "allow-ssh-rdp-iap",
    "description": "",
    "network": "https://www.googleapis.com/compute/v1/projects/acme-dev-web-3f9c/global/networks/default",
    "priority": 1000,
    "direction": "INGRESS",
    "logConfig": {
      "enable": false
    },
    "disabled": false,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/acme-dev-web-3f9c/global/firewalls/allow-ssh-rdp-iap",
    "sourceRanges": [
      "35.235.240.0/20"
    ],
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "22",
          "3389"
        ]
      }
    ]
  },
  {
    "kind": "compute#firewall",
    "id": "4000000000000000003",
    "creationTimestamp": "2025-03-02T08:15:00.000-08:00",
    "name": "allow-internal",
    "description": "",
    "network": "https://www.googleapis.com/compute/v1/projects/acme-dev-web-3f9c/global/networks/default",
    "priority": 65534,
    "direction": "INGRESS",
    "logConfig": {
      "enable": false
    },
    "disabled": false,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/acme-dev-web-3f9c/global/firewalls/allow-internal",
    "sourceRanges": [
      "10.128.0.0/9"
    ],
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "0-65535"
        ]
      },
      {
        "IPProtocol": "udp",
        "ports": [
          "0-65535"
        ]
      },
      {
        "IPProtocol": "icmp"
      }
    ]
  }
]
